# GRPO-series

./: LICENSE  README.md  README_zh-CN.md
GRPO-Series/: LICENSE  NOTICE  README.md  README_zh-CN.md  benchmark_task.py  checkpoint.py  competition_math_task.py  dapo_math_task.py  data_types.py  deepscaler_task.py  eval_metrics.py  evaluate_models.py  evaluate_models_math7b.py  evaluate_models_r1_thinking.py  evaluate_models_readme.py  exgrpo.py  exgrpo_reward.py  exgrpo_training_hooks.py  grpo.py  grpo_efficient.py  gsm8k_task.py  lora.py  math_base_prompt.py  math_base_reward.py  math_grader.py  model_registry.py  pyproject.toml  r1_thinking_reward.py  sampling.py  test_competition_math.py  test_eval_metrics.py  test_exgrpo.py  test_simko_grader.py  train.py  train_deepscaler_legacy.py  train_exgrpo.py  train_exgrpo_math7b.py  train_r1_thinking.py  train_unified.py  train_unified_readme.py  (+2 more)
GRPO-Series/configs/: eval.yaml  train_countdown.yaml  train_countdown_24gb.yaml  train_deepscaler_legacy.yaml  train_exgrpo.yaml  train_exgrpo_7b.yaml  train_r1_thinking.yaml  train_unified.yaml
GRPO-Series/data/: README.md  README_zh-CN.md
GRPO-Series/docs/: evaluation.md  evaluation_zh-CN.md  training.md  training_zh-CN.md
GRPO-Series/scripts/: download_assets.sh
GRPO-Series/simko_grader/: __init__.py  extract_utils.py  grader.py
